<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/event_qr_code_back_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="0dp"
        android:src="@drawable/back_arrow"
        android:background="@null"
        android:contentDescription="@string/back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/event_qr_code_view"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_margin="32dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/qr_code"
        app:layout_constraintTop_toBottomOf="@id/event_qr_code_back_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/organizer_qrcode_save_to_photos_button"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_margin="24sp"
        android:backgroundTint="@color/black"
        android:text="@string/save_to_photos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>