<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Signup.Sign_up_view">
    <TextView
        android:id="@+id/name_sign_up"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:text="@string/name_sign_up"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/name_sign_up_input" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_sign_up_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:hint="Enter your name"
        app:layout_constraintTop_toBottomOf="@+id/name_sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/password_sign_up">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_sign_up_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/password_sign_up"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:text="@string/password_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/name_sign_up_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/password_sign_up_input" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_sign_up_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:hint="Enter your password"
        app:layout_constraintTop_toBottomOf="@+id/password_sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/email_sign_up">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_sign_up_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/email_sign_up"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:text="@string/email_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/password_sign_up_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/email_sign_up_input" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_sign_up_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:hint="Enter your email"
        app:layout_constraintTop_toBottomOf="@+id/email_sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/phone_num_sign_up">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_sign_up_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/phone_num_sign_up"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:text="@string/phone_num_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/email_sign_up_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/phone_num_sign_up_input" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_num_sign_up_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:hint="Enter your phone number"
        app:layout_constraintTop_toBottomOf="@+id/phone_num_sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/role_selection_container">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_num_sign_up_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:id="@+id/role_selection_container"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/submit_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_num_sign_up_input">

        <Button
            android:id="@+id/Organizer_button_sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/black"
            android:layout_weight="1"
            android:text="@string/sign_up_organizer" />

        <Button
            android:id="@+id/Entrant_button_sign_up"
            android:layout_width="0dp"
            android:backgroundTint="@color/black"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/sign_up_entrant" />
    </LinearLayout>
    <Button
        android:id="@+id/submit_sign_up"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/submit_sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/role_selection_container" />

</androidx.constraintlayout.widget.ConstraintLayout>
